syntax = "proto3";

import "google/protobuf/timestamp.proto";

package userservice;

option java_multiple_files = true;
option java_package = "com.shopic.grpc.userservice";


message ProfileRequest {
  string first_name = 11;
  string last_name = 12;
  string phone_number = 13;
}

message CreateLocalUserRequest {
  string email = 1;
  string password = 2;
  ProfileRequest profile = 3;
}

message CreateUserResponse {
  int64 user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
  google.protobuf.Timestamp created_at = 7;
}

message UserForAuthRequest {
  string email = 1;
}

message UserForAuthResponse {
  int64 userId = 1;
  string email = 2;
  string password = 3;
  repeated string role_names = 4;
  bool is_verified = 5;
  bool is_account_non_locked = 6;
}

message UserRolesRequest {
  int64 userId = 1;
}

message UserRolesResponse {
  repeated string role_names = 4;
}

service UserService {
  rpc createLocalUser (CreateLocalUserRequest) returns (CreateUserResponse);

  rpc getUserForAuth (UserForAuthRequest) returns (UserForAuthResponse);

  rpc getUserRoles (UserRolesRequest) returns (UserRolesResponse);
}